<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="99dp"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.SalesOrderActivity">

    <TextView
        android:id="@+id/aus_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/ColorAUS" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="3dp"
        android:background="@color/ColorDivider"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/yarn_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/yarn_name"
                android:textColor="@color/yarn"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/yarn_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="@string/val1"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/country"
                android:textColor="@color/yarn"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/country_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="@string/val2"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/qty"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/qty"
                android:textColor="@color/yarn"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/qty_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="@string/val3"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>