<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/stt_top_img" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="23dp"
                android:text="@string/sign_in"
                android:textColor="@color/colorsigninheader"
                android:textSize="20sp" />

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="23dp"
                android:layout_marginRight="16dp"
                app:boxStrokeColor="@color/colorinputouter">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_uid"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="textEmailAddress|textNoSuggestions"
                    android:textColor="@color/colorinputext"
                    android:maxLength="25"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="23dp"
                android:layout_marginRight="16dp"
                app:boxStrokeColor="@color/colorinputouter">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="textPassword|textNoSuggestions"
                    android:textColor="@color/colorinputext"
                    android:maxLength="25"
                    android:digits="@string/alphanumeric"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="21dp"
                android:background="@drawable/button_submit"
                android:paddingStart="@dimen/logo_top_app_name"
                android:paddingLeft="@dimen/logo_top_app_name"
                android:paddingEnd="@dimen/logo_top_app_name"
                android:paddingRight="@dimen/logo_top_app_name"
                android:text="@string/btnsubmit"
                android:textAllCaps="false"
                android:textColor="@color/colorbtntext"
                android:textSize="@dimen/btn_txt_size" />

        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>