<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_end_rgt"
                android:layout_marginTop="@dimen/space_twelve"
                android:layout_marginRight="@dimen/space_end_rgt"
                app:boxStrokeColor="@color/colorinputouter">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_sal_ord_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_sales_ordnum"
                    android:inputType="textNoSuggestions"
                    android:maxLength="25"
                    android:textColor="@color/colorinputext"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_end_rgt"
                android:layout_marginTop="@dimen/space_twenty"
                android:layout_marginRight="@dimen/space_end_rgt"
                app:boxStrokeColor="@color/colorinputouter">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_sal_ord_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_sales_orddate"
                    android:focusable="false"
                    android:inputType="textNoSuggestions"
                    android:maxLength="25"
                    android:textColor="@color/colorinputext"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_end_rgt"
                android:layout_marginTop="@dimen/space_twenty"
                android:layout_marginRight="@dimen/space_end_rgt"
                app:boxStrokeColor="@color/colorinputouter">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_sal_ord_cusname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_cus_name"
                    android:inputType="textNoSuggestions"
                    android:maxLength="25"
                    android:textColor="@color/colorinputext"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_end_rgt"
                android:layout_marginTop="@dimen/space_twenty"
                android:layout_marginRight="@dimen/space_end_rgt"
                app:boxStrokeColor="@color/colorinputouter">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_sal_ord_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_country"
                    android:inputType="textNoSuggestions"
                    android:maxLength="25"
                    android:textColor="@color/colorinputext"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_end_rgt"
                android:layout_marginTop="@dimen/space_twenty"
                android:layout_marginRight="@dimen/space_end_rgt"
                android:layout_marginBottom="@dimen/space_twelve"
                android:background="@drawable/edittextround"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginRight="10dp"
                    app:boxStrokeColor="@color/colorinputouter">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_sal_ord_twl_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_towel_name"
                        android:inputType="textNoSuggestions"
                        android:maxLength="25"
                        android:textColor="@color/colorinputext"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="@dimen/space_twenty"
                    android:layout_marginRight="10dp"
                    app:boxStrokeColor="@color/colorinputouter">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_sal_ord_twl_clr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_towel_clr"
                        android:inputType="textNoSuggestions"
                        android:maxLength="25"
                        android:textColor="@color/colorinputext"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="@dimen/space_twenty"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    app:boxStrokeColor="@color/colorinputouter">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_sal_ord_twl_qty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_towel_qty"
                        android:inputType="textNoSuggestions"
                        android:maxLength="25"
                        android:textColor="@color/colorinputext"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottom_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="10dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/button_submit"
                    android:paddingStart="@dimen/logo_top_app_name"
                    android:paddingLeft="@dimen/logo_top_app_name"
                    android:paddingEnd="@dimen/logo_top_app_name"
                    android:paddingRight="@dimen/logo_top_app_name"
                    android:text="@string/btnsubmit"
                    android:textColor="@color/colorbtntext"
                    android:textSize="@dimen/btn_txt_size" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_submit"
                    android:paddingStart="@dimen/logo_top_app_name"
                    android:paddingLeft="@dimen/logo_top_app_name"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:paddingEnd="@dimen/logo_top_app_name"
                    android:paddingRight="@dimen/logo_top_app_name"
                    android:text="@string/btncancel"
                    android:textColor="@color/colorbtntext"
                    android:textSize="@dimen/btn_txt_size" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>



